# nb1500_experimentation

./: Cargo.toml  Embed.toml  build.rs  memory.x  scratch.txt
.cargo/: config.toml
src/: latest_working_code.rs  lib.rs  main.rs
